--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Caixa protótipo</title>
     <link rel="stylesheet" href="./style.css" type="text/css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
+        integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
+        integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -27,10 +36,12 @@
             </div>
         </nav>
     </header>
-    <main>
+    <main class="d-flex">
         <nav id="vertical-nav" class="closed">
-            <div class="arrow-container"><img id="open-arrow" src="./assets/keyboard_double_arrow_right_black_24dp.svg"
-                    alt="arrow to the right"></div>
+            <div class="arrow-container d-flex justify-content-between">
+                <p id="campo-gestor" style="display: none;">Gestor</p><img id="open-arrow"
+                    src="./assets/keyboard_double_arrow_right_black_24dp.svg" alt="arrow to the right">
+            </div>
             <div id="opened-container">
                 <div class="whole-tag">
                     <div onclick="openAndCloseDropDownMenu('gestaovendas')" class="parent-tag">
@@ -79,7 +90,7 @@
                         <img id="parent-arrow2" src="./assets/round_keyboard_arrow_down_black_24dp.png"
                             alt="arrow down and up">
                     </div>
-                    <div  class="child-closed dropdown">
+                    <div class="child-closed dropdown">
                         <div class="child-tag">
                             <!-- TEMPLATE DE UMA TAG -->
                             <div id="tag5" onclick="activeMenuClass('tag5', 1) " class="mini-tag">
@@ -96,7 +107,7 @@
                                 <p>Ateste</p>
                             </div>
                             <!-- TEMPLATE DE UMA TAG -->
-                            <div id="tag7" onclick="activeMenuClass('tag7', 1) "class="mini-tag">
+                            <div id="tag7" onclick="activeMenuClass('tag7', 1) " class="mini-tag">
                                 <!-- ICONE DA TAG (COLOCAR TAG IMG E RETIRAR A DIV CASO QUEIRA COLOCAR UM ÍCONE)-->
                                 <div class="circle"></div>
                                 <!-- TEXTO DA TAG -->
@@ -105,8 +116,33 @@
                         </div>
                     </div>
                 </div>
+                <div class="whole-tag">
+                    <div onclick="openAndCloseDropDownMenu('propostas')" class="parent-tag">
+                        <p class="parent-tag-txt">Propostas</p>
+                        <img id="parent-arrow3" src="./assets/round_keyboard_arrow_down_black_24dp.png"
+                            alt="arrow down and up">
+                    </div>
+                    <div class="child-closed dropdown">
+                        <div class="child-tag">
+                            <!-- TEMPLATE DE UMA TAG -->
+                            <div id="tag8" onclick="activeMenuClass('tag8', 2) " class="mini-tag">
+                                <!-- ICONE DA TAG (COLOCAR TAG IMG E RETIRAR A DIV CASO QUEIRA COLOCAR UM ÍCONE)-->
+                                <div class="circle"></div>
+                                <!-- TEXTO DA TAG -->
+                                <p>Cadastrar Proposta</p>
+                            </div>
+                            <!-- TEMPLATE DE UMA TAG -->
+                            <div id="tag9" onclick="activeMenuClass('tag9', 2), insertContent(templateConsulta)" class="mini-tag">
+                                <!-- ICONE DA TAG (COLOCAR TAG IMG E RETIRAR A DIV CASO QUEIRA COLOCAR UM ÍCONE)-->
+                                <div class="circle"></div>
+                                <!-- TEXTO DA TAG -->
+                                <p>Consultar Proposta</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            </div>
+
         </nav>
         <section id="content">
             <section id="user-popup-container" class="popup-off">
@@ -134,6 +170,9 @@
                 </div>
                 <p id="big-txt">Gestão de vendas</p>
             </section>
+            <section id="pages">
+                
+            </section>
         </section>
     </main>
     <footer>
@@ -151,7 +190,14 @@
         </div>
     </footer>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+        integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
+        integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="./main.js"></script>
+   
 </body>
 
 </html>
